--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,4 +4,51 @@
 
 body {
     font-family: "Inter", sans-serif;
+    color: white;
+    background-color: #181d16;
+    margin-top: 30px;
+}
+
+.choice {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.choice:hover {
+    font-weight: bold;
+
+}
+
+.img-overlay {
+    position: relative;
+}
+
+.img-overlay img {
+    position: absolute;
+}
+
+.top {
+    animation-name: fade;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-duration: 3s;
+    animation-direction: alternate;
+}
+
+@keyframes fade {
+    0% {
+        opacity: 1;
+    }
+
+    25% {
+        opacity: 1;
+    }
+
+    75% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
